change to github_document

--- a/rmd/generating_initial_plots.Rmd
+++ b/rmd/generating_initial_plots.Rmd
@@ -3,9 +3,8 @@ title: "generating initial plots"
 author: "Arpan Neupane"
 date: "24/06/2020"
 output:
-  html_document: default
-  pdf_document: default
-  word_document: default
+  github_document:
+    html_preview: False
 ---
 
 ```{r setup, include=FALSE}
