--- a/rmd/further_exploration_of_the_data.Rmd
+++ b/rmd/further_exploration_of_the_data.Rmd
@@ -148,5 +148,144 @@ ggsave(path,plot = plot_mds, device = "pdf",dpi = 300)
 
 ```
 
-The plot shows that it is possilbe to find colloborators (by direcy inclusion of names in author list) or by closeness.
+The plot shows that it is possilbe to find colloborators (by direct inclusion of names in author list) or by closeness.
 This may be not be the best approach of clustering by authors. However, I think it is a step in the right direction.
+
+#Can we further improve this?
+What if we treated each document as a results from single cell RNAseq experiment. 
+I do not have expertise in this. However, since we are counting "features" per document and looking across all our documents,
+I thought why not?
+
+The following was taken from Satijalab.org tutorial on singlecell clustering with Seurat
+```{r}
+#remove PMID with no abstract
+my_data <- my_data %>% filter(abstract != "")
+
+#combine title, author, abstract into a single feature
+my_data_concat <- my_data %>% filter(country!="China") %>% rowwise() %>% mutate(authorlist = unlist(authorlist) %>% paste(collapse=",") %>% gsub(" ","",x=.)) %>% filter(authorlist != "NANA") %>% 
+mutate(combined = paste(articletitle,abstract,authorlist,sep=","))
+
+#remove puncuations
+my_data_concat <- my_data_concat %>% rowwise %>% mutate(combined = gsub("-|'|:|=|<|>|(|)","",x=combined))
+
+glimpse(my_data_concat)
+
+my_data_start <- my_data_concat %>% select(PMID,combined)
+
+#make sure tidytext is loaded
+library(tidytext)
+#tokenize words
+my_data_start_all <- my_data_start %>% group_by(PMID) %>% unnest_tokens(output = word,combined,to_lower = T) #%>% 
+
+#adding some immunology related words to stop_words
+tb_word <- tibble(word = c(stop_words$word,"conclusion","conclusions","result","results","background","methods",
+                           "method","material","materials","keyword","keywords","main","hypothesis","immune","cells","cell","immunology","immunity",
+                           "mean","se","sd","cv","ci","pvalue","p","0.05","0.01","0.95","95","control","tx","con","nature","confidenceinterval",
+                           "confidence","interval","significant","0.001","objective","0.001","inflammation","findings","controls","suggest","suggests","levels","level","level","difference","significance","abstracttext","analysis","analyze","treated"))
+
+#remove stop_words
+my_data_start_all <- my_data_start_all %>%ungroup %>% anti_join(tb_word,by = "word")
+
+#did this to generate tf, idf, and tf_idf for all
+my_data_start_all <- my_data_start_all %>% group_by(PMID,word) %>% summarize(count = n()) %>% ungroup %>% bind_tf_idf(word,PMID,count)
+
+#cast as a sparse matrix
+my_data_tfidf <- cast_sparse(my_data_start_all,row = PMID,column = word,value = count)
+my_data_tfidf_t <- Matrix::t(my_data_tfidf)
+rm(my_data_tfidf)
+#write some metadeta
+meta_data <- my_data_concat %>% 
+  select(-c(abstract,publishedon,journal,country,combined)) %>% rowwise %>% mutate(articletitle = gsub("'","",x = articletitle)) %>% 
+  as.data.frame
+rownames(meta_data) <- meta_data$PMID
+meta_data <- meta_data %>% select(-PMID)
+meta_data %>% head
+
+if(!"Seurat" %in% installed.packages()){
+  install.packages("Seurat")
+}else(library(Seurat))
+
+#i think the min cells is to select only cells with at least 10 features 
+#min.features is to keep features that are present in atleast 5 cells
+doc_seurat <- CreateSeuratObject(counts = my_data_tfidf_t, meta.data = meta_data,min.cells = 5,min.features = 10)
+doc_seurat
+#features were reduced to ~20K
+
+#"Normalizing". Need to read more about what this is doing
+doc_seurat <- NormalizeData(doc_seurat, normalization.method = "LogNormalize", scale.factor = 10000)
+
+#I think this is findining the features that have the highest variation
+doc_seurat <- FindVariableFeatures(doc_seurat)
+doc_seurat
+#suggesting that 2000 features are interesting (highly variable), other are "similar"?
+doc_seurat <- ScaleData(doc_seurat)
+
+
+#this does PCA with highly variable features or all features? not sure. 
+doc_seurat <- RunPCA(doc_seurat, npcs = 100, ndims.print = 1:10, nfeatures.print = 5)
+#i think the above code will only generate eigen vectors for the first npcs principle component (?)
+#is much faster that running prcomp or princomp
+#setting npcs higher makes it run longer
+
+#show sd by PCs?
+ElbowPlot(doc_seurat, ndims = 100)
+#most variation in the initial pcs then start tapering off (slowly)
+
+#the tutorial used 75 pcs, following that
+#most other parameters are left alone. need to read what they are and what they do
+doc_seurat <- FindNeighbors(doc_seurat, reduction = "pca", dims = 1:75, nn.eps = 0.5)
+doc_seurat <- FindClusters(doc_seurat, resolution = 3, n.start = 10)#took ~3-5 minutes
+
+#dimension reduction
+doc_seurat <- RunUMAP(doc_seurat, dims = 1:75, min.dist = 0.75,)
+
+#visualize
+d1 <- DimPlot(doc_seurat, reduction = "umap", pt.size = 0.1,group.by = "dataset") + ggtitle(label = "UMAP\ncolored by initial search query")
+d2 <- DimPlot(doc_seurat, reduction = "umap", pt.size = 0.1,label = T)+ggtitle(label = "UMAP\ncolored by clusters assiged by Seurat")
+
+d1
+
+d2+theme(legend.position ="none")
+
+```
+
+Ok so this looks like an interesting approach.
+First, the graphs look nicer! there are actual "clusters" compared to just doing pca.
+
+HoverLocator (also from Seurat)
+```{r}
+
+HoverLocator(plot = d1, information =FetchData(doc_seurat,vars = "articletitle"))
+
+```
+What if we want to search for specific terms?
+```{r}
+plot_what <- function(whattolookfor){
+  #what to look for can be a single string or a vector of characters
+  #remove space, not that not all search terms will yeild results
+  FeaturePlot(doc_seurat,features = whattolookfor, reduction = "umap",pt.size = 0.1)
+}
+
+#this shows some issues that need to be dealt with.
+plot_what(c("neutrophil"))
+
+```
+
+Issues still exist. 
+For example: neutrophil vs neutrophils might not results in same documents being identified.
+See below:
+```{r}
+plot_what(c("neutrophils","neutrophil"))
+```
+However, we did get some clustering going based on features.
+
+I also tried to use the FindMarkers function to identify what terms were driving clustering.
+
+```{r}
+#see d2 for cluster labels
+d2+theme(legend.position = "none")
+FindMarkers(doc_seurat, ident.1 = 32)
+#this cluster apparently contains information on nets (netrophil extracellular traps)
+
+```
+Now if only I could figure out how to label clusters according to the terms that were higher in them! next time.
